funciona el service y el repository